--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="timecode.js"></script>
 </head>
 <body>
+    Look at the console.
     <script>
         var seconds = '30942';
         console.log(seconds.toHHMMSS());
