--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         var hhmmss = '08:35:42';
         console.log(hhmmss.toSeconds());
 
+        var hhmmss = '08:35'; // 08:35:00
+        console.log(hhmmss.toSeconds());
+
         var hhmmss1 = '08:35:41';
         var hhmmss2 = '08:35:41';
         if(timecodeCompare(hhmmss1, hhmmss2)){
