compatibility has been achieved.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         var hhmmss = '08:35:42';
         console.log(hhmmss.toSeconds());
 
-        var hhmmss = '08:35'; // 08:35:00
+        hhmmss = '08:35'; // 08:35:00
         console.log(hhmmss.toSeconds());
 
         var hhmmss1 = '08:35:41';
